[package]
name = "net-kit"
version = "0.1.2"
edition = "2021"
rust-version = "1.89"
description = "Cross-platform network reachability monitoring with a single Net facade and Tokio runtime support."
readme = "README.md"
repository = "https://github.com/0barman/net-kit"
documentation = "https://docs.rs/net-kit"
license = "MIT"
keywords = ["network", "monitor", "reachability", "tokio", "netwatch"]
categories = ["network-programming", "asynchronous"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[dependencies]
n0-watcher = "=1.0.0-rc.0"
netwatch = "0.18.0"
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
vibe-ready = { version = "0.1.1", default-features = false, features = ["log-noop", "store-noop"] }
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Networking_NetworkListManager", "Win32_System_Com"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
